Doc/force-app/main/default/objects/Case/fields/Account_CSM_Health_Rating__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM_Health_Rating__c</fullName>
    <formula>Text( Account.CSM_Health_Rating__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account CSM Health Rating</label>
    <type>Text</type>
</CustomField>