Doc/force-app/main/default/objects/Case/fields/Account_Territory__c.field-meta.xml
<CustomField>
    <fullName>Account_Territory__c</fullName>
    <formula>Account.Simple_Territory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Territory</label>
    <type>Text</type>
</CustomField>