Doc/force-app/main/default/objects/Case/fields/Actual_Fulfillment_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Fulfillment_Date__c</fullName>
    <description>Date which goods were actually received by IntApp</description>
    <label>Actual Fulfillment Date</label>
    <type>Date</type>
</CustomField>