Doc/force-app/main/default/objects/Case/fields/Adoption_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Project_Status__c</fullName>
    <description>Revenue Practice request to facilite tracking and reporting of Time Builder Implementation cases.</description>
    <label>Adoption Project Status</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>