Doc/force-app/main/default/objects/Case/fields/Appliance_Config__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appliance Config</label>
    <type>Checkbox</type>
</CustomField>