Doc/force-app/main/default/objects/Case/fields/ApplicationArea__c.field-meta.xml
<CustomField>
    <fullName>ApplicationArea__c</fullName>
    <description>Maps to JIRA Component. JIRA is a picklist, this field is text. Update Manually.</description>
    <inlineHelpText>Maps to JIRA Component. JIRA is a picklist, this field is text. Update Manually.</inlineHelpText>
    <label>Application Area Affected</label>
    <length>50</length>
    <type>Text</type>
</CustomField>