Doc/force-app/main/default/objects/Case/fields/ASAP_ID__c.field-meta.xml
<CustomField>
    <fullName>ASAP_ID__c</fullName>
    <externalId>true</externalId>
    <label>ASAP Case ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>