Doc/force-app/main/default/objects/Case/fields/ASAP_Meet_with_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>ASAP_Meet_with_Case_Owner__c</fullName>
    <formula>HYPERLINK(&quot;https://asap2.convoq.com/meeting/sfmeetnow.aspx?lid=&quot; &amp; OwnerId ,
IMAGE(&quot;https://asap2.convoq.com/Images/Presence/Init.gif?lid=&quot; &amp; OwnerId,&quot;Install ASAP to initiate online meetings.&quot;, 16, 15) &amp;
&quot;Meet with Case Owner&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meet with Case Owner</label>
    <type>Text</type>
</CustomField>