Doc/force-app/main/default/objects/Case/fields/ASAP_Meet_with_Contact__c.field-meta.xml
<CustomField>
    <fullName>ASAP_Meet_with_Contact__c</fullName>
    <formula>IF (ContactId &lt;&gt; &quot;&quot;, 

HYPERLINK(&quot;https://asap2.convoq.com/meeting/sfmeetnow.aspx?lid=&quot; &amp; ContactId, 
IMAGE(&quot;https://asap2.convoq.com/Images/Presence/Init.gif?lid=&quot; &amp; ContactId, 
&quot;Install ASAP to initiate online meetings.&quot;, 16, 15) &amp; &quot;Meet with Contact&quot;), 

&quot;Contact not specified&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meet with Contact</label>
    <type>Text</type>
</CustomField>