Doc/force-app/main/default/objects/Case/fields/Backplane_replacement_appliance_count__c.field-meta.xml
<CustomField>
    <fullName>Backplane_replacement_appliance_count__c</fullName>
    <label>Backplane replacement appliance count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>