Doc/force-app/main/default/objects/Case/fields/Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Book_Value__c</fullName>
    <formula>IF(OR( 
ISPICKVAL(CurrencyIsoCode , &quot;USD&quot;) , 
ISPICKVAL(CurrencyIsoCode , &quot;AUD&quot;), 
ISPICKVAL(CurrencyIsoCode , &quot;CAD&quot;) 
),PS_Estimated_Hours__c * 250, IF( 
ISPICKVAL(CurrencyIsoCode , &quot;GBP&quot; 
), PS_Estimated_Hours__c * 150, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>