Doc/force-app/main/default/objects/Case/fields/Bug_Number__c.field-meta.xml
<CustomField>
    <fullName>Bug_Number__c</fullName>
    <description>Jira Bug Number</description>
    <label>Jira Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>