Doc/force-app/main/default/objects/Case/fields/Case_Age_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Hours__c</fullName>
    <formula>IF(
IsClosed=FALSE,
NOW()- CreatedDate,
IF(
ISPICKVAL(Status, &quot;Defect Filed&quot;),
Date_Defect_Filed__c - DATEVALUE(CreatedDate),
ClosedDate - CreatedDate
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case_Age_Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>