Doc/force-app/main/default/objects/Case/fields/Case_Initial_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Initial_Response_Time__c</fullName>
    <label>Case Initial Response Time</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>