Doc/force-app/main/default/objects/Case/fields/Category_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Issue__c</fullName>
    <label>Category of Issue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Implementation Issue</fullName>
            </value>
            <value>
                <fullName>Partner Issues</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Self-inflicted</fullName>
            </value>
            <value>
                <fullName>Support Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>