Doc/force-app/main/default/objects/Case/fields/Closed_Under_24_Hours__c.field-meta.xml
<CustomField>
    <fullName>Closed_Under_24_Hours__c</fullName>
    <formula>IF (  Date_Closed__c &lt;= (DATEVALUE(CreatedDate)+ (24/24)), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Closed Under 24 Hours</label>
    <type>Text</type>
</CustomField>