Doc/force-app/main/default/objects/Case/fields/Conditional_Action__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conditional Action</label>
    <type>Checkbox</type>
</CustomField>