Doc/force-app/main/default/objects/Case/fields/Conflicts_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Ownership__c</fullName>
    <formula>TEXT(Account.IntApp_Open_Conflicts__c)</formula>
    <label>Conflicts - Ownership</label>
    <type>Text</type>
</CustomField>