Doc/force-app/main/default/objects/Case/fields/Consumed__c.field-meta.xml
<CustomField>
    <fullName>Consumed__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>