Doc/force-app/main/default/objects/Case/fields/Contact_Roles_Verified__c.field-meta.xml
<CustomField>
    <fullName>Contact_Roles_Verified__c</fullName>
    <description>Check every 6 months to ensure contact roles are associated with account contacts</description>
    <label>Contact Roles Verified</label>
    <type>Date</type>
</CustomField>