Doc/force-app/main/default/objects/Case/fields/ContactAccount__c.field-meta.xml
<CustomField>
    <fullName>ContactAccount__c</fullName>
    <description>Case Account Name</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactAccount</label>
    <type>Text</type>
</CustomField>