Doc/force-app/main/default/objects/Case/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <description>Contact name for the Case</description>
    <formula>Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactName</label>
    <type>Text</type>
</CustomField>