Doc/force-app/main/default/objects/Case/fields/Contingent__c.field-meta.xml
<CustomField>
    <fullName>Contingent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this case tied to a contingent deal, with either a POC or ROR?</description>
    <inlineHelpText>Is this case tied to a contingent deal? Does it have a POC or ROR?</inlineHelpText>
    <label>Contingent</label>
    <type>Checkbox</type>
</CustomField>