Doc/force-app/main/default/objects/Case/fields/Contract_Implementation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Contract_Implementation_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Deprecated - to be removed</description>
    <label>Contract Implementation Hours - D</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>