Doc/force-app/main/default/objects/Case/fields/Contract_Implementation_Hours_Total__c.field-meta.xml
<CustomField>
    <fullName>Contract_Implementation_Hours_Total__c</fullName>
    <description>This is a roll up summary field summing the Contract Implementation Hours on the related PS Line Items.</description>
    <inlineHelpText>This is a roll up summary field summing the Contract Implementation Hours on the related PS Line Items.</inlineHelpText>
    <label>Contract Implementation Hours</label>
    <summarizedField>PS_Line_Item__c.Contract_Implementation_Hours__c</summarizedField>
    <summaryForeignKey>PS_Line_Item__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>