Doc/force-app/main/default/objects/Case/fields/Contract_Training_Hours__c.field-meta.xml
<CustomField>
    <fullName>Contract_Training_Hours__c</fullName>
    <label>Contract Training Hours</label>
    <length>3</length>
    <type>Text</type>
</CustomField>