Doc/force-app/main/default/objects/Case/fields/Contracted_Deferral_Length__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Deferral_Length__c</fullName>
    <formula>Deferral__r.Contracted_Deferral_Length__c</formula>
    <label>Contracted Deferral Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>