Doc/force-app/main/default/objects/Case/fields/CSM_Account_Mgr__c.field-meta.xml
<CustomField>
    <fullName>CSM_Account_Mgr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM Account Mgr</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>