Doc/force-app/main/default/objects/Case/fields/Customer_Geographic_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Geographic_Restriction__c</fullName>
    <formula>TEXT(Account.Customer_Geographic_Restriction__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Geographic Restriction</label>
    <type>Text</type>
</CustomField>