Doc/force-app/main/default/objects/Case/fields/Customer_Relationship_Director__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relationship_Director__c</fullName>
    <formula>Account.CRD__r.FirstName&amp;&quot; &quot;&amp;Account.CRD__r.LastName</formula>
    <label>Customer Relationship Director</label>
    <type>Text</type>
</CustomField>