Doc/force-app/main/default/objects/Case/fields/Date_24_7_Support_Coupon_Used__c.field-meta.xml
<CustomField>
    <fullName>Date_24_7_Support_Coupon_Used__c</fullName>
    <formula>Account.Date_24_7_Support_Coupon_Used__c</formula>
    <label>Date 24/7 Support Coupon Used</label>
    <type>Date</type>
</CustomField>