Doc/force-app/main/default/objects/Case/fields/Defective_Appliance_Serial__c.field-meta.xml
<CustomField>
    <fullName>Defective_Appliance_Serial__c</fullName>
    <description>Serial number of the defective appliance</description>
    <label>Defective Appiance Serial Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>