Doc/force-app/main/default/objects/Case/fields/Deferral__c.field-meta.xml
<CustomField>
    <fullName>Deferral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deferral</label>
    <referenceTo>RD_Defferals__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>