Doc/force-app/main/default/objects/Case/fields/Deferral_Actual_Delay__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Actual_Delay__c</fullName>
    <formula>Deferral__r.Actual_Delay__c</formula>
    <label>Deferral Actual Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>