Doc/force-app/main/default/objects/Case/fields/Deferral_Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Recurring_Amount__c</fullName>
    <formula>Deferral__r.RD_Amount__c</formula>
    <label>Deferral Recurring Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>