Doc/force-app/main/default/objects/Case/fields/Deferral_Status__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Status__c</fullName>
    <formula>IF(ISBLANK(Deferral__c),&quot;&quot;,
   CASE(Deferral__r.Deferral_Status__c,
      &quot;In Process&quot;,&quot;In Process&quot;,
      &quot;On Hold&quot;,&quot;On Hold&quot;,
      &quot;Pending Close Approval&quot;,&quot;Pending Close Approval&quot;,
      &quot;Closed - Won&quot;,&quot;Closed - Won&quot;,
      &quot;Closed - Lost&quot;,&quot;Closed - Lost&quot;,
   &quot;Error&quot;)
)</formula>
    <label>Deferral Status</label>
    <type>Text</type>
</CustomField>