Doc/force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Ops</fullName>
                <color>#0B6FCE</color>
                <label>Business Ops</label>
            </value>
            <value>
                <fullName>CRM</fullName>
                <color>#78C953</color>
                <label>CRM</label>
            </value>
            <value>
                <fullName>C-Team</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
                <color>#E27001</color>
                <label>Finance</label>
            </value>
            <value>
                <fullName>HR</fullName>
                <color>#A845DC</color>
                <label>HR</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <color>#F3D904</color>
                <label>IT</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <color>#A53711</color>
                <label>Marketing</label>
            </value>
            <value>
                <fullName>Product Management</fullName>
                <color>#66E9BD</color>
                <label>Product Management</label>
            </value>
            <value>
                <fullName>Product Marketing</fullName>
                <color>#0B24BE</color>
                <label>Product Marketing</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <color>#419249</color>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Sales Ops</fullName>
                <color>#B6E32E</color>
                <label>Sales Ops</label>
            </value>
            <value>
                <fullName>Services</fullName>
                <color>#641CCF</color>
                <label>Services</label>
            </value>
            <value>
                <fullName>Support</fullName>
                <color>#F96FB7</color>
                <label>Support</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>