Doc/force-app/main/default/objects/Case/fields/Dev_Escalation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Dev_Escalation_Hours__c</fullName>
    <label>Dev Escalation Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>