Doc/force-app/main/default/objects/Case/fields/Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Engagement Manager)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>