Doc/force-app/main/default/objects/Case/fields/Engagement_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Manager_Email__c</fullName>
    <label>Engagement Manager Email</label>
    <type>Email</type>
</CustomField>