Doc/force-app/main/default/objects/Case/fields/Engineer_Score_Normalized__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Score_Normalized__c</fullName>
    <formula>IF(
  CreatedDate&lt;DATETIMEVALUE(&quot;2013-11-01 00:00:01&quot;),
  Survey_EngineerScore_Number__c*2,
  Survey_EngineerScore_Number__c
)</formula>
    <label>Engineer Score - Normalized</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>