Doc/force-app/main/default/objects/Case/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <description>SC-000036</description>
    <inlineHelpText>Internal means you are obtaining help/advice for issue the customer is not yet aware
Customer means the customer is aware and will likely escalate</inlineHelpText>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>