Doc/force-app/main/default/objects/Case/fields/Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_Date__c</fullName>
    <defaultValue>DATEVALUE(&quot;2099-09-09&quot;)</defaultValue>
    <description>Expected project completion date.</description>
    <inlineHelpText>Expected project completion date.</inlineHelpText>
    <label>Expected Completion Date</label>
    <type>Date</type>
</CustomField>