Doc/force-app/main/default/objects/Case/fields/First_Email_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Email_Response_Date__c</fullName>
    <label>First Email Response Date</label>
    <type>DateTime</type>
</CustomField>