Doc/force-app/main/default/objects/Case/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <description>Derived field based upon the value set in &quot;Confidence in Completion Date&quot; field.</description>
    <formula>IF (IsClosed = True, &quot;1 Closed&quot;, 
          IF(ISPICKVAL(PSCase_Confidence_in_Completion__c, &quot;High&quot;) , &quot;2 Commit&quot;, 
	IF(ISPICKVAL(PSCase_Confidence_in_Completion__c, &quot;Low&quot;), &quot;3 Best Case&quot;, &quot;4 N/A&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Category</label>
    <type>Text</type>
</CustomField>