Doc/force-app/main/default/objects/Case/fields/FTP_Action__c.field-meta.xml
<CustomField>
    <fullName>FTP_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FTP Action</label>
    <type>Checkbox</type>
</CustomField>