Doc/force-app/main/default/objects/Case/fields/Function_Library__c.field-meta.xml
<CustomField>
    <fullName>Function_Library__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Function Library</label>
    <type>Checkbox</type>
</CustomField>