Doc/force-app/main/default/objects/Case/fields/Hardware_Failure__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hardware Failure</label>
    <type>Checkbox</type>
</CustomField>