Doc/force-app/main/default/objects/Case/fields/HistoryText__c.field-meta.xml
<CustomField>
    <fullName>HistoryText__c</fullName>
    <label>HistoryText</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>