Doc/force-app/main/default/objects/Case/fields/Hot_List_Status__c.field-meta.xml
<CustomField>
    <fullName>Hot_List_Status__c</fullName>
    <formula>IF (Account.Hot_List_Case_Count__c  &gt; 0, IMAGE( &quot;/img/samples/flag_red.gif&quot;, &quot;Hot List&quot;), &quot;Not on Hot List&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the account related to this case on the Customer Care Hot List?</inlineHelpText>
    <label>Hot List Status</label>
    <type>Text</type>
</CustomField>