Doc/force-app/main/default/objects/Case/fields/Hot_List_Stoplight__c.field-meta.xml
<CustomField>
    <fullName>Hot_List_Stoplight__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client RAG Status</label>
    <type>Text</type>
</CustomField>