Doc/force-app/main/default/objects/Case/fields/Hour_Created_PST__c.field-meta.xml
<CustomField>
    <fullName>Hour_Created_PST__c</fullName>
    <description>This formula calculates the hour in which a case was created in PST. Only to be used in reports - not to be displayed on actual case.</description>
    <formula>VALUE( MID( TEXT( CreatedDate - 0.2919 ) , 12, 2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour Created PST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>