Doc/force-app/main/default/objects/Case/fields/HTTP_Action__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HTTP Action</label>
    <type>Checkbox</type>
</CustomField>