Doc/force-app/main/default/objects/Case/fields/IB_Ownership__c.field-meta.xml
<CustomField>
    <fullName>IB_Ownership__c</fullName>
    <formula>TEXT(Account.IntegrationBuilder__c)</formula>
    <label>IB - Ownership</label>
    <type>Text</type>
</CustomField>