Doc/force-app/main/default/objects/Case/fields/Implementation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager__c</fullName>
    <label>Implementation Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kathy Englar</fullName>
                <default>true</default>
                <label>Kathy Englar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>