Doc/force-app/main/default/objects/Case/fields/Implementation_Manager_Hours__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager_Hours__c</fullName>
    <label>Implementation Mgr Hours(auto-populated)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>