Doc/force-app/main/default/objects/Case/fields/Implementation_Mgr_Hours_Description__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Mgr_Hours_Description__c</fullName>
    <label>Implementation Mgr Hours Description</label>
    <type>TextArea</type>
</CustomField>