Doc/force-app/main/default/objects/Case/fields/Incorrect_MSSA__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_MSSA__c</fullName>
    <description>BIZ-50209</description>
    <label>Incorrect MSSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annex</fullName>
            </value>
            <value>
                <fullName>DPA</fullName>
            </value>
            <value>
                <fullName>Liability Payment Terms</fullName>
            </value>
            <value>
                <fullName>Master Terms Version</fullName>
            </value>
            <value>
                <fullName>Support SLA</fullName>
            </value>
            <value>
                <fullName>Unable to Open Attachment</fullName>
            </value>
            <value>
                <fullName>Watermark</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>